--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:title" content="Оплата">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
+    <title>Оплата/Доставка</title>
   </head>
   <body class="u-body">
     <section>
